--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "author": "Thomas Jouaville",
   "private": true,
+  "homepage": "https://theteencoder.github.io/rubiks-timer",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "framer-motion": "^4.1.17",
+    "gh-pages": "^3.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.14.3",
@@ -22,7 +24,9 @@
     "eject": "react-scripts eject",
     "build:styles": "postcss src/styles/tailwind.css -o src/styles/styles.css",
     "prebuild": "npm run build:styles",
-    "prestart": "npm run build:styles"
+    "prestart": "npm run build:styles",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
